Fix spacing on "Delete" button
The top of the word "Delete" was cut off.

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -14,7 +14,7 @@ $base-border-radius: 3px;
 $base-spacing: $base-line-height * 1em;
 $large-spacing: $base-spacing * 2;
 $small-spacing: $base-spacing / 2;
-$tiny-spacing: $base-spacing / 3;
+$tiny-spacing: $base-spacing / 8;
 $base-z-index: 0;
 
 // Colors
