--- a/sass/pages/_profiles.scss
+++ b/sass/pages/_profiles.scss
@@ -33,8 +33,6 @@
       border-radius: 0;
       color: $medium-gray;
       font-weight: 400;
-      line-height: 4px; // move bottom-border closer to text
-      margin-right: $base-spacing;
       padding: 0 0 $tiny-spacing 0;
       vertical-align: baseline;
 
