--- a/static/css/application.css
+++ b/static/css/application.css
@@ -459,9 +459,7 @@ form .errors {
     border-radius: 0;
     color: #999;
     font-weight: 400;
-    line-height: 4px;
-    margin-right: 1.5em;
-    padding: 0 0 0.5em 0;
+    padding: 0 0 0.1875em 0;
     vertical-align: baseline; }
     .page-profiles .profile button:hover {
       border-color: #ed5446;
